Add styling for modal

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
     --light-color: #f4f4f4;
     --lose-color: #dc3545;
     --win-color: #28a745;
-    --modal-duration: 1s;
 }
 
 * {
@@ -80,6 +79,13 @@ body {
 
 .choice {
     cursor: pointer;
+}
+
+.text-win {
+    color: var(--win-color);
+}
+.text-lose {
+    color: var(--lose-color);
 }
 
 .choice:hover {
